--- a/WebContent/resources/css/ij.css
+++ b/WebContent/resources/css/ij.css
@@ -69,8 +69,13 @@ body {
 	min-height: 662px;
 }
 
-.col-lg-3 > div {
-	height: 645px;
+.col-lg-3 > form {
+	height: 1000px;
+}
+.col-lg-3 > form > div {
+	border: 0 none;
+	height: 100%;
+	width: 100%;
 	background-color: #ffffff;
 	padding: 20px 20px 20px 20px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
