--- a/WebContent/resources/css/kj.css
+++ b/WebContent/resources/css/kj.css
@@ -16,11 +16,11 @@ body {
     z-index: 99999;
 }
 
-.navbar-brand, .navbar-nav > li > a {
+.navbar-brand, .navbar-nav > li > a, .navbar-nav > li > form > a {
 	text-shadow: 0px;
 }
 
-.navbar-nav > li > a {
+.navbar-nav > li > a, .navbar-nav > li > form > a {
 	border-right: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 1px 0 0 rgba(255, 255, 255, 0.11);
     color: white;
@@ -59,7 +59,7 @@ body {
     white-space: nowrap;
 }
 
-.navbar-nav > li > a:hover, .nav > li > a:hover {
+.navbar-nav > li > a:hover, .nav > li > a:hover, .navbar-nav > li > form > a:hover{
 	color:#446cb3;
 	background:#ffffff; 
 }
