add ERD in to index.xhtml

--- a/WebContent/resources/css/line.css
+++ b/WebContent/resources/css/line.css
@@ -4,3 +4,10 @@
   shape-rendering: crispEdges;
   vector-effect: non-scaling-stroke;
 }
+
+#tableMode {
+	display: none;
+}
+#ERDMode{
+	display : block;
+}
