--- a/WebContent/resources/css/jk.css
+++ b/WebContent/resources/css/jk.css
@@ -2,19 +2,28 @@ body {
   background-color: #efefef;
   overflow :hidden;
 }
-
+.headerbar-container {
+	padding-right: 15px;
+}
 .navbar {
   background: #446cb3;
+  border: 0;
   border-radius: 0px;
   margin-bottom: 10px;
 }
 
-.navbar-nav > li > a, .navbar-nav > li > form > a{
+label {
+	max-width: 100%;
+	margin-bottom: 0px;
+}
+
+.navbar-nav > li > form > a, #switch-mode-icon, #upload-trigger {
 	height: 100%;
 	padding: 13px 27px 15px;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   color: white;
   display: inline-block;
+  font-weight: 700;
   font-size: 16px;
   text-decoration: none;
 
@@ -24,11 +33,23 @@ body {
   -webkit-transition:color 0.2s ease-out, background 0.2s ease-in;
 }
 
-.navbar-nav > li > a:hover, .navbar-nav > li > form > a:hover {
+#present-mode {
+	height: 100%;
+	display: inline-block;
+	font-size: 16px;
+  text-decoration: none;
+  padding: 13px 0px 15px;
+  width: 200px;
+  text-align: center;
+  background-color: #fff;
+  color:#86888a;
+}
+
+.navbar-nav > li > form > a:hover, #switch-mode-icon:hover, #upload-trigger:hover {
   color:#446cb3;
 }
 
-.nav > li > a:hover, .nav > li > form > a:hover {
+.nav > li > form > a:hover, #switch-mode-icon:hover, #upload-trigger:hover {
 	background-color:#fff;
 }
 .hcia-container {
