--- a/WebContent/resources/css/jk.css
+++ b/WebContent/resources/css/jk.css
@@ -12,6 +12,10 @@ body {
   margin-bottom: 10px;
 }
 
+#switch-mode-icon {
+	border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 label {
 	max-width: 100%;
 	margin-bottom: 0px;
@@ -46,7 +50,7 @@ p {
 	display: inline-block;
 	font-size: 16px;
   text-decoration: none;
-  padding: 13px 40px 15px;
+  padding: 13px 27px 15px;
   background-color: #446cb3;
   color:#fff;
 }
@@ -151,6 +155,6 @@ p {
 	height:325px;
 }
 
-#validate-notice-col {
-	padding-left: 100px;
+#validate-name-notice, #validate-length-notice {
+	padding-left: 85px;
 }
